--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,6 @@
 <h1>Create a Team and Heros!</h1>
+
+<form action="/teams" method="POST">
+  <label for="team_name">Team Name: </label>
+  <input type="text" name="team[name]"><br>
+</form>
