--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,4 +3,17 @@
 <form action="/teams" method="POST">
   <label for="team_name">Team Name: </label>
   <input type="text" name="team[name]"><br>
+  <label for="team_motto">Team Motto: </label>
+  <input type="text" name="team[motto]"><br>
+
+  <h3>Hero 1</h3>
+  <label for="hero1_name">Hero's Name: </label>
+  <input type="text" name="team[hero][][name]"><br>
+  <label for="hero1_power">Hero's Power: </label>
+  <input type="text" name="team[hero][][power]"><br>
+  <label for="hero1_bio">Hero's Biography: </label>
+  <input type="text" name="team[hero][][bio]"><br>
+  <h3>Hero 2</h3>
+
+  <h3>Hero 3</h3>
 </form>
