--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -13,7 +13,21 @@
   <input type="text" name="team[hero][][power]"><br>
   <label for="hero1_bio">Hero's Biography: </label>
   <input type="text" name="team[hero][][bio]"><br>
+  <br>
   <h3>Hero 2</h3>
-
+  <label for="hero2_name">Hero's Name: </label>
+  <input type="text" name="team[hero][][name]"><br>
+  <label for="hero2_power">Hero's Power: </label>
+  <input type="text" name="team[hero][][power]"><br>
+  <label for="hero2_bio">Hero's Biography: </label>
+  <input type="text" name="team[hero][][bio]"><br>
+  <br>
   <h3>Hero 3</h3>
+  <label for="hero3_name">Hero's Name: </label>
+  <input type="text" name="team[hero][][name]"><br>
+  <label for="hero3_power">Hero's Power: </label>
+  <input type="text" name="team[hero][][power]"><br>
+  <label for="hero3_bio">Hero's Biography: </label>
+  <input type="text" name="team[hero][][bio]"><br>
+  <br>
 </form>
