automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -30,4 +30,5 @@
   <label for="hero3_bio">Hero's Biography: </label>
   <input type="text" name="team[hero][][bio]"><br>
   <br>
+  <input type="submit">
 </form>
