--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,5 +1,5 @@
 <form action="/teams" method="POST">
-  <h1>Create a Team and Heros!</h1>
+  <h1>Create a Team and Heroes!</h1>
   <label for="team_name">Team Name: </label>
   <input type="text" name="team[name]"><br>
   <label for="team_motto">Team Motto: </label>
