--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,8 @@
 <h1><%= @team.name %></h1>
 <br>
 <h2><%= @team.motto %>!</h2>
+<br>
+<% @heroes.each do |hero| %>
+  <h2><%= hero.name %>!</h2>
+
+<% end %> 
