--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,7 +3,7 @@
 <h2><%= @team.motto %>!</h2>
 <br>
 <% @heroes.each do |hero| %>
-  <h2><%= hero.name %></h2><br>
+  <h2>Hero Name: <%= hero.name %></h2><br>
   <%= hero.power %>
   <%= hero.bio %> 
-<% end %> 
+<% end %>
