automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,11 +6,11 @@
   <input type="text" name="team[motto]"><br>
 
   <h3>Hero 1</h3>
-  <label for="hero1_name">Hero's Name: </label>
+  <label for="member1_name">Hero's Name: </label>
   <input type="text" name="team[hero][][name]"><br>
-  <label for="hero1_power">Hero's Power: </label>
+  <label for="member1_power">Hero's Power: </label>
   <input type="text" name="team[hero][][power]"><br>
-  <label for="hero1_bio">Hero's Biography: </label>
+  <label for="member1_bio">Hero's Biography: </label>
   <input type="text" name="team[hero][][bio]"><br>
   <br>
   <h3>Hero 2</h3>
