--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -14,19 +14,19 @@
   <input type="text" name="team[hero][][bio]"><br>
   <br>
   <h3>Hero 2</h3>
-  <label for="hero2_name">Hero's Name: </label>
+  <label for="member2_name">Hero's Name: </label>
   <input type="text" name="team[hero][][name]"><br>
-  <label for="hero2_power">Hero's Power: </label>
+  <label for="member2_power">Hero's Power: </label>
   <input type="text" name="team[hero][][power]"><br>
-  <label for="hero2_bio">Hero's Biography: </label>
+  <label for="member2_bio">Hero's Biography: </label>
   <input type="text" name="team[hero][][bio]"><br>
   <br>
   <h3>Hero 3</h3>
-  <label for="hero3_name">Hero's Name: </label>
+  <label for="member3_name">Hero's Name: </label>
   <input type="text" name="team[hero][][name]"><br>
-  <label for="hero3_power">Hero's Power: </label>
+  <label for="member3_power">Hero's Power: </label>
   <input type="text" name="team[hero][][power]"><br>
-  <label for="hero3_bio">Hero's Biography: </label>
+  <label for="member3_bio">Hero's Biography: </label>
   <input type="text" name="team[hero][][bio]"><br>
   <br>
   <input type="submit">
