--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -29,5 +29,5 @@
   <label for="member3_bio">Hero's Biography: </label>
   <input id="member3_bio" type="text" name="team[hero][][bio]"><br>
   <br>
-  <input type="submit" name="Submit"> 
+  <input type="submit" name="submit"> 
 </form>
