--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1><%= @team.name %></h1>
 <br>
-<h2><%= @team.motto %>!</h2>
+<h2>Team Motto: <%= @team.motto %>!</h2>
 <br>
 <% @heroes.each do |hero| %>
   <h3>Hero Name: <%= hero.name %></h3>
